--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,14 @@
 Flask==0.10.1
 gunicorn==19.3.0
+httplib2==0.9.2
 itsdangerous==0.24
 Jinja2==2.8
 MarkupSafe==0.23
 oauthlib==1.0.3
+python-instagram==1.3.2
 requests==2.8.1
 requests-oauthlib==0.5.0
+simplejson==3.8.1
+six==1.10.0
 TwitterAPI==2.3.5
 Werkzeug==0.11
