--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 Flask==0.10.1
+Flask-Cors==2.1.2
 gunicorn==19.3.0
 httplib2==0.9.2
 itsdangerous==0.24
@@ -11,4 +12,4 @@ requests-oauthlib==0.5.0
 simplejson==3.8.1
 six==1.10.0
 TwitterAPI==2.3.5
-Werkzeug==0.11
+Werkzeug==0.11.1
